--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 nav.navbar{
     padding: 18px 0;
-    position: fixed;
+    position:fixed;
     width: 100%;
     top: 0;
     z-index: 9999;
@@ -153,3 +153,64 @@ span.navbar-text{
   nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
       border-color: transparent;
   }
+
+ /* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    nav.navbar a.navbar-brand {
+        width: auto; /* Adjust width for smaller screens */
+    }
+
+    nav.navbar .navbar-nav .nav-link.navbar-link {
+        padding: 0 15px;
+        font-size: 16px; /* Slightly smaller font size */
+    }
+
+    .navbar-text button {
+        padding: 10px 20px;
+        font-size: 16px; /* Slightly smaller font size */
+    }
+
+    .social-icon a {
+        width: 36px;
+        height: 36px;
+    }
+
+    .social-icon a::before {
+        width: 36px;
+        height: 36px;
+    }
+
+    .social-icon a img {
+        width: 30%;
+    }
+}
+
+@media (max-width: 480px) {
+    nav.navbar a.navbar-brand {
+        width: auto; /* Further adjusted width for very small screens */
+    }
+
+    nav.navbar .navbar-nav .nav-link.navbar-link {
+        padding: 0 10px;
+        font-size: 14px; /* Further smaller font size */
+    }
+
+    .navbar-text button {
+        padding: 8px 16px;
+        font-size: 14px; /* Further smaller font size */
+    }
+
+    .social-icon a {
+        width: 30px;
+        height: 30px;
+    }
+
+    .social-icon a::before {
+        width: 30px;
+        height: 30px;
+    }
+
+    .social-icon a img {
+        width: 25%;
+    }
+}
